--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "cropper": "^4.1.0",
     "dayjs": "^1.9.3",
+    "jquery": "^3.5.1",
     "json-bigint": "^1.0.0",
     "lodash": "^4.17.20",
     "vant": "^2.10.9",
